# snmr

./: .gitignore  AGENTS.md  LICENSE  NEURAL_RETARGETING_DESIGN.md  README.md  THIRD_PARTY.md  pyproject.toml
docs/: 20260716-1931-sol.md  CURRENT_ARCHITECTURE.md  DATA.md  E49_ACT_THROUGH_LATENT_PROTOCOL.md  E50_PHYSICS_REPAIRED_TEACHER_PROTOCOL.md  EXPERIMENT_LOG.md  FLOW_MATCHING_RETROSPECTIVE.md  FLOW_RETARGETING_LITERATURE.md  FLOW_RETARGETING_SIDE_PROJECT.md  FLOW_RETARGETING_V2_PROTOCOL.md  FLOW_RETARGETING_V3_PROTOCOL.md  FORWARD_RESEARCH_MEMO.md  NEURAL_RETARGETING_RESEARCH_fable.md  NEURAL_RETARGETING_RESEARCH_sol.md  PAPER_DRAFT.md  PROGRAM_CONSOLIDATION.md  REACTOR_GMR_HOLOSOMA_ANALYSIS.md  README.md  RESEARCH_PROPOSAL_RETARGET_TO_TRACKING.md  SHARING_COST_SCREEN_PROTOCOL.md  WBT_LATENT_INTEGRATION_STUDY.md  WBT_LATENT_LITERATURE_REVIEW.md  WBT_LATENT_PHASE3_PROTOCOL.md  WBT_LATENT_PLAN_v2.md
runs/: wbt_independent_eval_protocol.sh  wbt_pilot_replication_protocol.sh
scripts/: _run_ablations_nogate.py  analyze_gate1_diagnostics.py  analyze_gate1_replication.py  analyze_gate1_screen.py  analyze_gate1b_m3.py  analyze_latent.py  analyze_sharing_cost_screen.py  analyze_wbt_horizon.py  analyze_wbt_latent_phase2.py  analyze_wbt_latent_phase3.py  analyze_wbt_reference_confirmatory.py  analyze_wbt_reference_dev.py  analyze_wbt_reference_quality.py  analyze_wbt_replication.py  analyze_wbt_rollouts.py  attach_latent_to_wbt.py  audit_contact_masks.py  audit_m1b_support.py  benchmark.py  diagnose_latent_flow_guidance.py  diagnose_sharing_gradients.py  eval_footlock.py  (+31 more)
(+542 files in other folders)
